--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "price_check_threads": 500,
     "xsrf_refresh_interval": 5,
+    "use_page_compression": true,
     "targets": [
         [20573078, 300]
     ]
